...
fun FloatButton(onClick: () -> Unit ){
    FloatingActionButton(
        onClick = onClick,
        containerColor = MaterialTheme.colorScheme.primary,
        contentColor = Color.White
        ) {
        Icon(imageVector = Icons.Default.Add, contentDescription = "Agregar")

    }
}

@Composable
fun MainIconButton(icon:ImageVector, onClick: () -> Unit){
...
